# DVEPS-Lite

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  startUp.sh
.github/workflows/: c-cpp.yml  codeql.yml  cpp-build-test.yml  cpp.yml  integration.yml  python.yml
GCS/: CommandScreen.py  Dockerfile  Drone.py  GCS.py  Initialize.py  Map.py  README.txt  coordinates.csv  offline_tiles.db  requirements.txt  run_gcs.sh  settings.yml
GCS/Utils/: Enums.py  Globals.py  Log.py  Utils.py  connected.py  doubleFwd.py  loadOfflineTiles.py  mavlinkTest.py  msgForwarding.py
GCS/Utils/wrappers/: ButtonWrapper.py  FrameWrapper.py  WindowWrapper.py
GCS/logs/: drone_log_2025-02-04T14-32-59.662408.txt  user_log_2025-02-04T14-33-06.498020.txt
GCS/src/: CommandScreen.py  Drone.py  GCS.py  Initialize.py  LogWindow.py  Map.py  Settings.py  __init__.py  math_functions.py
GCS/tests/: math_test.py
processor/: CMakeLists.txt  Dockerfile  Dockerfile.jetson  mak_common.inc  mak_def.inc
processor/include/: math_functions.h
processor/src/: main.cpp
processor/src/camera_scan_pkg/: CMakeLists.txt  package.xml
processor/src/camera_scan_pkg/msg/: Obstacle.msg  ObstacleArray.msg
processor/src/camera_scan_pkg/src/: img_analysis_node.cpp  img_raw_pub_node.cpp  img_raw_sub_node.cpp
processor/src/custom_msg_pkg/: CMakeLists.txt  package.xml
processor/src/custom_msg_pkg/msg/: Command.msg  CommandAck.msg  LidarPosition.msg
processor/src/decision_pkg/: CMakeLists.txt  package.xml
processor/src/decision_pkg/src/: decision_node.cpp
processor/src/drone_commander_pkg/: CMakeLists.txt  package.xml
processor/src/drone_commander_pkg/include/drone_commander_pkg/: ActuatorControl.hpp  DroneCommander.hpp  PosFunctions.hpp
processor/src/drone_commander_pkg/src/: AcutatorControl.cpp  DroneCommander.cpp  PosFunctions.cpp
processor/src/laser_scan_pkg/: CMakeLists.txt  package.xml
processor/src/laser_scan_pkg/sdk/include/: rplidar.h  rplidar_cmd.h  rplidar_driver.h  rplidar_protocol.h  rptypes.h  sl_crc.h  sl_lidar.h  sl_lidar_cmd.h  sl_lidar_driver.h  sl_lidar_driver_impl.h  sl_lidar_protocol.h  sl_types.h
processor/src/laser_scan_pkg/sdk/src/: rplidar_driver.cpp  sdkcommon.h  sl_async_transceiver.cpp  sl_async_transceiver.h  sl_crc.cpp  sl_lidar_driver.cpp  sl_lidarprotocol_codec.cpp  sl_lidarprotocol_codec.h  sl_serial_channel.cpp  sl_tcp_channel.cpp  sl_udp_channel.cpp
processor/src/laser_scan_pkg/sdk/src/arch/linux/: arch_linux.h  net_serial.cpp  net_serial.h  net_socket.cpp  timer.cpp  timer.h
processor/src/laser_scan_pkg/sdk/src/arch/macOS/: arch_macOS.h  net_serial.cpp  net_serial.h  net_socket.cpp  timer.cpp  timer.h
processor/src/laser_scan_pkg/sdk/src/arch/win32/: arch_win32.h  net_serial.cpp  net_serial.h  net_socket.cpp  timer.cpp  timer.h
processor/src/laser_scan_pkg/sdk/src/dataunpacker/: dataunnpacker_commondef.h  dataunnpacker_internal.h  dataunpacker.cpp  dataunpacker.h  dataupacker_namespace.h
processor/src/laser_scan_pkg/sdk/src/dataunpacker/unpacker/: handler_capsules.cpp  handler_capsules.h  handler_hqnode.cpp  handler_hqnode.h  handler_normalnode.cpp  handler_normalnode.h
processor/src/laser_scan_pkg/sdk/src/hal/: abs_rxtx.h  byteops.h  byteorder.h  event.h  locker.h  socket.h  thread.cpp  thread.h  types.h  util.h  waiter.h
processor/src/laser_scan_pkg/src/: lidar_pub_node.cpp  lidar_sub_node.cpp
processor/src/lidar_scan_pkg/: CMakeLists.txt  package.xml
processor/src/lidar_scan_pkg/src/: heartbeat.cpp  lidar_analysis_node.cpp  lidar_pub_node.cpp  obstacle_distance_node.cpp
processor/src/pos_pkg/: CMakeLists.txt  package.xml
processor/src/pos_pkg/include/pos_pkg/: PosFunctions.hpp
processor/src/pos_pkg/src/: PosFunctions.cpp
processor/src/system_launch/: package.xml  setup.cfg  setup.py
processor/src/system_launch/launch/: bring_up_system_launch.py
processor/tests/: test_math_functions.cpp
source/: main.cpp
